# KoalaGUI

./: .gitignore  AnalogSensorGraph.cpp  AnalogSensorGraph.h  CMakeLists.txt  Icons.qrc  KoalaGUI.pro  PIDsettings.txt  ProximitySensorPainter.cpp  ProximitySensorPainter.h  Sensor.cpp  Sensor.h  SerialGate.cpp  SerialGate.h  analoghistogram.cpp  analoghistogram.h  analogsensorgraph.cpp  analogsensorgraph.h  analogvaluesloader.cpp  analogvaluesloader.h  batterycharge.cpp  batterycharge.h  colorpalettedialog.cpp  colorpalettedialog.h  colorpalettedialog.ui  console.cpp  console.h  defines.h  form.ui  inputsoutputstab.cpp  inputsoutputstab.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h  pidregulator.cpp  pidregulator.h  proximitysensorpainter.cpp  proximitysensorpainter.h  (+15 more)
res/: Thumbs.db
